--- a/Front_End/html/franca medical/Paciente.html
+++ b/Front_End/html/franca medical/Paciente.html
@@ -304,11 +304,11 @@
         <div class="row g-3">
           <div class="col-12">
             <div class="row">
-              <div class="col-md mb-md-0 mb-2">
+              <div class="col-md mb-md-0 mb-2" id="administrador">
                 <div class="form-check custom-option custom-option-icon checked">
                   <label class="form-check-label custom-option-content" for="customRadioBuilder">
                     <span class="custom-option-body">
-                        <a href="wizard-ex-property-listing.html">
+                        <a href="criarUsuario.html">
                       <i class="bx bx-building-house"></i>
                       <span class="custom-option-title">Administrador</span>
                     </span>
