--- a/Front_End/html/franca medical/criarUsuario.html
+++ b/Front_End/html/franca medical/criarUsuario.html
@@ -302,14 +302,14 @@
       <!-- Personal Details -->
       <div id="personal-details" class="content active dstepper-block fv-plugins-bootstrap5 fv-plugins-framework">
         <div class="row g-3">
-          <div class="col-12">
+          <div class="col-12" >
             <div class="row">
-              <div class="col-md mb-md-0 mb-2">
-                <div class="form-check custom-option custom-option-icon checked">
+              <div class="col-md mb-md-0 mb-2 border 1px #000 " >
+                <div class="form-check custom-option custom-option-icon checked" id="administrador">
                   <label class="form-check-label custom-option-content" for="customRadioBuilder">
                     <span class="custom-option-body">
                       <i class="bx bx-building-house"></i>
-                      <a href="wizard-ex-property-listing.html">
+                      <a href="criarUsuario.html">
                       <span class="custom-option-title">Administrador</span>
                     </span>
                     </a>
