--- a/Front_End/html/franca medical/Medico.html
+++ b/Front_End/html/franca medical/Medico.html
@@ -1,37 +1,4 @@
 <!DOCTYPE html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- =========================================================
 * Sneat - Bootstrap 5 HTML Admin Template - Pro | v1.0.0
 ==============================================================
@@ -303,11 +270,11 @@
         <div class="row g-3">
           <div class="col-12">
             <div class="row">
-              <div class="col-md mb-md-0 mb-2">
+              <div class="col-md mb-md-0 mb-2 border 1px #000" id="administrador">
                 <div class="form-check custom-option custom-option-icon checked">
                   <label class="form-check-label custom-option-content" for="customRadioBuilder">
                     <span class="custom-option-body">
-                        <a href="wizard-ex-property-listing.html">
+                        <a href="criarUsuario.html">
                       <i class="bx bx-building-house"></i>
                       <span class="custom-option-title">Administrador</span>
                     </span>
@@ -319,7 +286,7 @@
                 <div class="form-check custom-option custom-option-icon">
                   <label class="form-check-label custom-option-content" for="customRadioOwner">
                     <span class="custom-option-body">
-                        <a href="Medico.html">
+                        <a href="/Medico.html">
                       <i class="bx bx-plus-medical"></i>
                       <span class="custom-option-title">Medico</span>
                     </span>
@@ -365,7 +332,7 @@
             <button class="btn btn-label-secondary btn-prev" disabled=""> <i class="bx bx-chevron-left bx-sm ms-sm-n2"></i>
               <span class="align-middle d-sm-inline-block d-none">Cancelar</span>
             </button>
-            <button class="btn btn-primary btn-next" id="Next"> <span class="align-middle d-sm-inline-block d-none me-sm-1">CRIAR</span> <i class="bx bx-chevron-right bx-sm me-sm-n2"></i></button>
+            <button class="btn btn-primary btn-next" id="Next" type="button" onclick="enviar()"> <span class="align-middle d-sm-inline-block d-none me-sm-1">CRIAR</span> <i class="bx bx-chevron-right bx-sm me-sm-n2"></i></button>
           </div>
         </div>
       </div>
@@ -438,6 +405,35 @@
 <script src="../../assets/vendor/libs/formvalidation/dist/js/FormValidation.min.js"></script>
 <script src="../../assets/vendor/libs/formvalidation/dist/js/plugins/Bootstrap5.min.js"></script>
 <script src="../../assets/vendor/libs/formvalidation/dist/js/plugins/AutoFocus.min.js"></script>
+
+<script>
+  function enviar() {
+    
+    let nome = document.querySelector("#plUserName").value 
+    let email = document.querySelector("#plEmail").value
+    let senha = document.querySelector("#plPassWord").value
+    let especialidade = document.querySelector("#plUserName").value
+
+    fetch("http://localhost:3000/Medico", {
+  method: "post",
+  headers: {
+    'Accept': 'application/json',
+    'Content-Type': 'application/json'
+  },
+
+  //make sure to serialize your JSON body
+  body: JSON.stringify({
+    nome: nome,
+    senha: senha,
+    email: email,
+    especialidade: especialidade,
+  })
+})
+.then( (response) => { 
+   location.reload()
+});
+  }
+</script>
 
   <!-- Main JS -->
   <script src="../../assets/js/main.js"></script>
