--- a/Front_End/html/franca medical/Medico.html
+++ b/Front_End/html/franca medical/Medico.html
@@ -108,12 +108,23 @@
       <ul class="menu-sub">
         <li class="menu-item active">
           <a href="criarUsuario.html" class="menu-link">
-            <div data-i18n="Criar usuário">Criar usuário</div>
+            <div data-i18n="Criar usuário">Administrador</div>
           </a>
         </li>
-        <li class="menu-item">
+        <li class="menu-item active">
+          <a href="Medico.html" class="menu-link">
+            <div data-i18n="Criar usuário">Médico</div>
+          </a>
+        </li>
+        <li class="menu-item active">
+          <a href="Paciente.html" class="menu-link">
+            <div data-i18n="Criar usuário">Paciente</div>
+          </a>
+        </li>
+        <li class="menu-item active">
           <a href="agendarConsulta.html" class="menu-link">
-            <div data-i18n="Agendar consulta">Agendar consulta</div>
+            <i class="menu-icon tf-icons bx bx-calendar"></i>
+            <div data-i18n="Calendar">Agendar consulta</div>
           </a>
         </li>
         <li class="menu-item">
@@ -123,8 +134,6 @@
         </li>
       </ul>
     </li>
-
-    
   </ul>
   
   
@@ -268,46 +277,6 @@
       <!-- Personal Details -->
       <div id="personal-details" class="content active dstepper-block fv-plugins-bootstrap5 fv-plugins-framework">
         <div class="row g-3">
-          <div class="col-12">
-            <div class="row">
-              <div class="col-md mb-md-0 mb-2 border 1px #000" id="administrador">
-                <div class="form-check custom-option custom-option-icon checked">
-                  <label class="form-check-label custom-option-content" for="customRadioBuilder">
-                    <span class="custom-option-body">
-                        <a href="criarUsuario.html">
-                      <i class="bx bx-building-house"></i>
-                      <span class="custom-option-title">Administrador</span>
-                    </span>
-                </a>
-                  </label>
-                </div>
-              </div>
-              <div class="col-md mb-md-0 mb-2">
-                <div class="form-check custom-option custom-option-icon">
-                  <label class="form-check-label custom-option-content" for="customRadioOwner">
-                    <span class="custom-option-body">
-                        <a href="/Medico.html">
-                      <i class="bx bx-plus-medical"></i>
-                      <span class="custom-option-title">Medico</span>
-                    </span>
-                </a>
-                  </label>
-                </div>
-              </div>
-              <div class="col-md mb-md-0 mb-2">
-                <div class="form-check custom-option custom-option-icon">
-                  <label class="form-check-label custom-option-content" for="customRadioBroker">
-                    <span class="custom-option-body">
-                        <a href="Paciente.html">
-                      <i class="bx bx-user"></i>
-                      <span class="custom-option-title">Paciente</span>
-                    </span>
-                </a>
-                  </label>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="col-sm-6 fv-plugins-icon-container">
           <div class="col-sm-6" id="NOME">
             <input type="text" id="plUserName" name="plUserName" class="form-control" placeholder="NOME" >
@@ -317,17 +286,23 @@
             <input type="text" id="plEmail" name="plEmail" class="form-control" placeholder="EMAIL">
           </div>
           <br>
-          <div class="col-sm-6 form-password-toggle" id="SENHA">
-            <div class="input-group input-group-merge" >
-              <input type="password" id="plPassWord" class="form-control" name="plPassWord" placeholder="SENHA" aria-describedby="passwordToggler">
-              <span id="passwordToggler" class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
-            </div>
+          <div class="col-sm-6" id="CPF">
+            <input type="text" id="plEmail" name="plEmail" class="form-control" placeholder="CPF">
           </div>
           <br>
-            <div class="col-sm-6" id="Especialidade">
-              <input type="text" id="plUserName" name="plUserName" class="form-control" placeholder="ESPECIALIDADE" >
+          <div class="col-sm-6" id="ENDERECO">
+            <input type="text" id="plEmail" name="plEmail" class="form-control" placeholder="ENDEREÇO">
+          </div>
+          <br>
+            <div class="mb-3" id="EspCalen">
+              <select id="defaultSelect" class="form-select">
+                <option>ESPECIALIDADE</option>
+                <option value="1">CLÍNICO GERAL</option>
+                <option value="2">PSICOLOGO</option>
+                <option value="3">PEDIATRA</option>
+              </select>
             </div>
-            <br>
+          <br>
           <div class="col-12 d-flex justify-content-between">
             <button class="btn btn-label-secondary btn-prev" disabled=""> <i class="bx bx-chevron-left bx-sm ms-sm-n2"></i>
               <span class="align-middle d-sm-inline-block d-none">Cancelar</span>
