--- a/Front_End/html/franca medical/criarUsuario.html
+++ b/Front_End/html/franca medical/criarUsuario.html
@@ -141,7 +141,17 @@
       <ul class="menu-sub">
         <li class="menu-item active">
           <a href="criarUsuario.html" class="menu-link">
-            <div data-i18n="Criar usuário">Criar usuário</div>
+            <div data-i18n="Criar usuário">Administrador</div>
+          </a>
+        </li>
+        <li class="menu-item active">
+          <a href="Medico.html" class="menu-link">
+            <div data-i18n="Criar usuário">Médico</div>
+          </a>
+        </li>
+        <li class="menu-item active">
+          <a href="Paciente.html" class="menu-link">
+            <div data-i18n="Criar usuário">Paciente</div>
           </a>
         </li>
         <li class="menu-item active">
@@ -157,8 +167,6 @@
         </li>
       </ul>
     </li>
-
-    
   </ul>
   
   
@@ -302,46 +310,6 @@
       <!-- Personal Details -->
       <div id="personal-details" class="content active dstepper-block fv-plugins-bootstrap5 fv-plugins-framework">
         <div class="row g-3">
-          <div class="col-12" >
-            <div class="row">
-              <div class="col-md mb-md-0 mb-2 border 1px #000 " >
-                <div class="form-check custom-option custom-option-icon checked" id="administrador">
-                  <label class="form-check-label custom-option-content" for="customRadioBuilder">
-                    <span class="custom-option-body">
-                      <i class="bx bx-building-house"></i>
-                      <a href="criarUsuario.html">
-                      <span class="custom-option-title">Administrador</span>
-                    </span>
-                    </a>
-                  </label>
-                </div>
-              </div>
-              <div class="col-md mb-md-0 mb-2" >
-                <div class="form-check custom-option custom-option-icon">
-                  <label class="form-check-label custom-option-content" for="customRadioOwner" >
-                    <span class="custom-option-body">
-                      <a href="Medico.html">
-                      <i class="bx bx-plus-medical"></i>
-                      <span class="custom-option-title">Medico</span>
-                    </span>
-                  </a>
-                  </label>
-                </div>
-              </div>
-              <div class="col-md mb-md-0 mb-2">
-                <div class="form-check custom-option custom-option-icon">
-                  <label class="form-check-label custom-option-content" for="customRadioBroker">
-                    <span class="custom-option-body">
-                      <a href="Paciente.html">
-                      <i class="bx bx-user"></i>
-                      <span class="custom-option-title">Paciente</span>
-                    </span>
-                  </a>
-                  </label>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="col-sm-6 fv-plugins-icon-container">
           <div class="col-sm-6" id="NOME">
             <input type="text" id="plUserName" name="plUserName" class="form-control" placeholder="NOME">
@@ -354,6 +322,13 @@
           <div class="col-sm-6 form-password-toggle" id="SENHA">
             <div class="input-group input-group-merge">
               <input type="password" id="plPassWord" class="form-control" name="plPassWord" placeholder="SENHA" aria-describedby="passwordToggler">
+              <span id="passwordToggler" class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
+            </div>
+          </div>
+          <br>
+          <div class="col-sm-6 form-password-toggle" id="SENHA">
+            <div class="input-group input-group-merge">
+              <input type="password" id="plPassWord" class="form-control" name="plPassWord" placeholder="CONFIRMAR SENHA" aria-describedby="passwordToggler">
               <span id="passwordToggler" class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
             </div>
           </div>
